fix: general adjustments to favorites
