# docs/swagger.json
@@ -380,6 +380,12 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Idioma da resposta. Exemplo: pt-BR",
+                        "name": "language",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "default": 1,
                         "description": "Número da página",
@@ -436,9 +442,21 @@
                 "tags": [
                     "favorites"
                 ],
+                "summary": "Adiciona um filme ou série nos favoritos de um perfil",
+                "parameters": [
+                    {
+                        "description": "Corpo da requisição para adicionar um novo favorito",
+                        "name": "FavoriteRequestDto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto_favorite.FavoriteRequestDto"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "201": {
+                        "description": "Created"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -448,6 +466,18 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto_shared.ErrorDto"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto_shared.ErrorDto"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/dto_shared.ErrorDto"
                         }
@@ -855,11 +885,8 @@
         "dto_favorite.FavoriteDto": {
             "type": "object",
             "properties": {
-                "content_id": {
-                    "type": "integer"
-                },
-                "content_type": {
-                    "type": "string"
+                "content": {
+                    "$ref": "#/definitions/dto_content.ContentDto"
                 },
                 "created_at": {
                     "type": "string"
@@ -871,6 +898,20 @@
                     "type": "integer"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto_favorite.FavoriteRequestDto": {
+            "type": "object",
+            "properties": {
+                "content_external_id": {
+                    "type": "integer"
+                },
+                "profile_id": {
+                    "type": "integer"
+                },
+                "type": {
                     "type": "string"
                 }
             }
