# src/api/v1/controllers/favorite/favorite_controller.go
@@ -8,6 +8,7 @@ import (
 	dto_favorite "github.com/KaueTTS/streaming_api/src/api/v1/dto/favorite"
 	dto_shared "github.com/KaueTTS/streaming_api/src/api/v1/dto/shared"
 	responses "github.com/KaueTTS/streaming_api/src/api/v1/responses"
+	validator_favorite "github.com/KaueTTS/streaming_api/src/api/v1/validators"
 	service_interface "github.com/KaueTTS/streaming_api/src/services/interfaces"
 	shared_constants "github.com/KaueTTS/streaming_api/src/shared/constants"
 	shared_errors "github.com/KaueTTS/streaming_api/src/shared/errors"
@@ -29,19 +30,20 @@ func NewFavoriteController(favoriteService service_interface.FavoriteServiceInte
 }
 
 // ListFavorites godoc
-// @Summary Lista os favoritos de um perfil
-// @Description Retorna uma lista paginada de filmes e séries favoritos de um perfil específico.
-// @Tags favorites
-// @Param profile_id query int true "ID do perfil"
-// @Param page query int false "Número da página" default(1)
-// @Param per_page query int false "Número de itens por página" default(10)
-// @Success 200 {object} dto_favorite.FavoriteResponseDto
-// @Failure 400 {object} dto_shared.ErrorDto
-// @Failure 401 {object} dto_shared.ErrorDto
-// @Failure 404 {object} dto_shared.ErrorDto
-// @Failure 500 {object} dto_shared.ErrorDto
-// @Router /v1/favorites [get]
-// @Security BearerAuth
+// @Summary 	 Lista os favoritos de um perfil
+// @Description  Retorna uma lista paginada de filmes e séries favoritos de um perfil específico.
+// @Tags 		 favorites
+// @Param 		 profile_id query int true "ID do perfil"
+// @Param 		 language query string false "Idioma da resposta. Exemplo: pt-BR"
+// @Param  		 page query int false "Número da página" default(1)
+// @Param 		 per_page query int false "Número de itens por página" default(10)
+// @Success 	 200 {object} dto_favorite.FavoriteResponseDto
+// @Failure 	 400 {object} dto_shared.ErrorDto
+// @Failure 	 401 {object} dto_shared.ErrorDto
+// @Failure 	 404 {object} dto_shared.ErrorDto
+// @Failure 	 500 {object} dto_shared.ErrorDto
+// @Router 		 /v1/favorites [get]
+// @Security 	 BearerAuth
 func (c *FavoriteController) ListFavorites(ctx *fiber.Ctx) error {
 	userID, ok := controllers_helpers.GetAuthenticatedUserID(ctx)
 	if !ok {
@@ -72,7 +74,7 @@ func (c *FavoriteController) ListFavorites(ctx *fiber.Ctx) error {
 		PerPage: request.PerPage,
 	})
 
-	response, err := c.favoriteService.ListFavorites(ctx.UserContext(), userID, request.ProfileID, page, perPage)
+	response, err := c.favoriteService.ListFavorites(ctx.UserContext(), userID, request.ProfileID, page, perPage, request.Language)
 	if err != nil {
 		if errors.Is(err, shared_errors.ErrProfileNotFound) {
 			return responses.NotFound(ctx, shared_errors_profile.ProfileNotFound)
@@ -84,18 +86,52 @@ func (c *FavoriteController) ListFavorites(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(response)
 }
 
-// AddFavorite godoc
-// @Summary
+// AddFavorite 	godoc
+// @Summary 	Adiciona um filme ou série nos favoritos de um perfil
 // @Description
-// @Tags favorites
-// @Success 200
-// @Failure 400 {object} dto_shared.ErrorDto
-// @Failure 401 {object} dto_shared.ErrorDto
-// @Failure 500 {object} dto_shared.ErrorDto
-// @Router /v1/favorites [post]
-// @Security BearerAuth
+// @Tags 		favorites
+// @Param 		FavoriteRequestDto body dto_favorite.FavoriteRequestDto true "Corpo da requisição para adicionar um novo favorito"
+// @Success 	201
+// @Failure 	400 {object} dto_shared.ErrorDto
+// @Failure 	401 {object} dto_shared.ErrorDto
+// @Failure 	404 {object} dto_shared.ErrorDto
+// @Failure 	409 {object} dto_shared.ErrorDto
+// @Failure 	500 {object} dto_shared.ErrorDto
+// @Router 		/v1/favorites [post]
+// @Security 	BearerAuth
 func (c *FavoriteController) AddFavorite(ctx *fiber.Ctx) error {
-	return fmt.Errorf("não implementado")
+	userID, ok := controllers_helpers.GetAuthenticatedUserID(ctx)
+	if !ok {
+		return responses.Unauthorized(ctx, shared_errors_auth.InvalidToken)
+	}
+
+	request, details, ok := controllers_helpers.ParseBody[dto_favorite.FavoriteRequestDto](ctx)
+	if !ok {
+		return responses.BadRequest(ctx, shared_errors.InvalidRequestBody, details)
+	}
+
+	if errDetails := validator_favorite.ValidateFavoriteRequest(request); len(errDetails) > 0 {
+		return responses.BadRequest(
+			ctx,
+			shared_errors_favorite.InvalidCreateFavoriteData,
+			errDetails,
+		)
+	}
+
+	err := c.favoriteService.AddFavorite(ctx.UserContext(), userID, request)
+	if err != nil {
+		if errors.Is(err, shared_errors.ErrProfileNotFound) {
+			return responses.NotFound(ctx, shared_errors_profile.ProfileNotFound)
+		}
+
+		if errors.Is(err, shared_errors.ErrFavoriteAlreadyExists) {
+			return responses.Conflict(ctx, shared_errors_favorite.FavoriteAlreadyExists)
+		}
+
+		return responses.InternalServerError(ctx, shared_errors_favorite.FailedToCreateFavorite)
+	}
+
+	return ctx.Status(fiber.StatusCreated).JSON(nil)
 }
 
 // RemoveFavorite godoc
